# htgs-battle-problem

./: CMakeLists.txt  main.cpp
data/: InitializePlayer.h  OutputFighters.h  OutputPlayer.h  OutputResult.h  Player.h
rule/: FieldRule.h
task/: FightTask.h  GeneratePlayer.h
